# The-Art-Of-Design-Patterns

./: .gitignore  CMakeLists.txt  LICENSE  README.md
creational/: CMakeLists.txt
creational/abstract_factory/: CMakeLists.txt
creational/abstract_factory/game/: android.h  controller.h  game_factory.h  game_factory_test.cc  ios.h
creational/abstract_factory/skin/: component.h  skin_factory.h  skin_factory_test.cc  spring.h  summer.h
creational/builder/: CMakeLists.txt
creational/builder/actor/: actor.h  actor_builder.h  actor_controller.h  actor_test.cc
creational/builder/player/: interface.h  interface_builder.h  interface_test.cc
creational/factory_method/: CMakeLists.txt
creational/factory_method/image_reader/: image_reader.h  image_reader_creator.h  image_reader_factory.h  image_reader_factory_test.cc
creational/factory_method/logger/: logger.h  logger_factory.h  logger_factory_test.cc
creational/generic_factory/: chart.h  generic_factory.h  generic_factory_test.cc
creational/prototype/: CMakeLists.txt  document_manager.h  official_document.h  official_document_test.cc
creational/simple_factory/: CMakeLists.txt
creational/simple_factory/chart/: chart.h  chart_factory.h  chart_factory_test.cc  config.json  config_utils.h
creational/simple_factory/shape/: exception.h  shape.h  shape_factory.h  shape_factory_test.cc
creational/singleton/db_connection_pool/: db_connection.h  db_connection_pool.h  db_connection_pool_test.cc
creational/singleton/load_balancer/: load_balancer.h  load_balancer_test.cc
structural/: CMakeLists.txt
structural/adapter/encryptor/: encryptor_adaptor.h  encryptor_algo.h  main.cc
structural/adapter/score_operation/: algo.h  main.cc  score_operation.h
structural/bridge/converter/: converter.h  database.h  main.cc
structural/bridge/image/: image.h  image_factory.h  image_impl.h  main.cc
structural/composite/control/: control.h  main.cc
structural/composite/virus/: file.h  main.cc
structural/decorator/component/: component.h  decorator.h  main.cc
structural/decorator/encryption/: builder.h  decorator.h  encryption.h  main.cc
structural/facade/backup/: backup.h  facade.h  main.cc
structural/facade/encrypt/: facade.h  file.h  main.cc
structural/flyweight/chess/: igo_chess.h  igo_chess_factory.h  main.cc
structural/flyweight/media/: document.h  main.cc  media.h  media_factory.h
